# advent

./: .ghcid  .gitmodules  README.md  cabal.project  hie.yaml
.github/workflows/: haskell-ci.yml
asmprog/: AsmProg.hs  asmprog.cabal
common/: advent.cabal
common/src/: Advent.hs
common/src/Advent/: AsmProg.hs  Bench.hs  Box.hs  Chinese.hs  Coord.hs  Coord3.hs  DisjointSet.hs  Fix.hs  Format.hs  Group.hs  Input.hs  KnotHash.hs  MaxClique.hs  Memo.hs  MinCut.hs  Nat.hs  Orphans.hs  PQueue.hs  Permutation.hs  Prelude.hs  Queue.hs  ReadS.hs  Search.hs  SmallSet.hs  Tokenize.hs  Visualize.hs
common/src/Advent/Format/: Enum.hs  Lexer.x  Parser.y  Show.hs  Types.hs  Utils.hs
inputs/2016/: 14.txt  18.txt  input06.txt  input17.txt  input23.txt
inputs/2017/: 07.txt  11.txt  14.txt  22.txt  25.txt  input08.txt  input09.txt  input10.txt  input16.txt  input19.txt  input21.txt
inputs/2020/: 03.txt  06.txt  09.txt  11.txt  13.txt  14.txt  16.txt  input01.txt  input02.txt  input05.txt  input10.txt  input12.txt  input15.txt  input17.txt  input20.txt  input22.txt  input23.txt  input24.txt
inputs/2021/: 02.txt  06.txt  12.txt  13.txt  16.txt  18.txt  19.txt  20.txt  21.txt  22.txt  25.txt  input01.txt  input03.txt  input08.txt  input09.txt  input10.txt  input11.txt  input14.txt  input17.txt  input23.txt
inputs/2022/: 01.txt  02.txt  03.txt  05.txt  06.txt  08.txt  09.txt  12.txt  14.txt  15.txt  16.txt  18.txt  21.txt  22.txt  23.txt
inputs/2023/: 01.txt  02.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  13.txt  15.txt  16.txt  17.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt
inputs/2024/: 01.txt  02.txt  03.txt  04.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  24.txt  25.txt
inputs/2025/: 01.txt  02.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt
knothash/: KnotHash.hs  knothash.cabal
solutions/: LICENSE  solutions.cabal
solutions/src/: Dummy.hs
solutions/src/2015/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs  Day23TH.hs
solutions/src/2016/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2017/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2018/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2019/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2020/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2021/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  24_sbv.hs  25.hs
solutions/src/2022/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  22_alt.hs  23.hs  24.hs  25.hs
solutions/src/2023/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2024/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs  13.hs  14.hs  15.hs  16.hs  17.hs  18.hs  19.hs  20.hs  21.hs  22.hs  23.hs  24.hs  25.hs
solutions/src/2025/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  07.hs  08.hs  09.hs  10.hs  11.hs  12.hs
