cabal-version:       3.6
name:                asmprog
version:             0.1.0.0
category:            None
synopsis:            Support library for 2016
description:         These are my cleaned-up solutions to the Advent of Code
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
build-type:          Simple
Tested-With:         GHC ==9.4.7, GHC ==9.6.3

library
  hs-source-dirs:    .
  exposed-modules:   AsmProg
  build-depends:
    base ^>= {4.17, 4.18, 4.19},
    advent,
    lens,
    mtl
  default-language:  Haskell2010
