cabal-version:       2.4
name:                advent
version:             0.1.0.0
category:            None
synopsis:            Advent of Code common library
description:         All the core functionality needed for the
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
homepage:            https://github.com/glguy/advent
bug-reports:         https://github.com/glguy/advent/issues
build-type:          Simple
Tested-With:         GHC ==9.4.4

source-repository head
  type: git
  location: https://github.com/glguy/advent

flag visualize
  description:       Enable Advent.Visualize
  default:           False
  manual:            True

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:
    Advent
    Advent.Box
    Advent.Chinese
    Advent.Coord
    Advent.Coord3
    Advent.Fix
    Advent.Format
    Advent.Group
    Advent.Input
    Advent.MaxClique
    Advent.Memo
    Advent.Nat
    Advent.Orphans
    Advent.Permutation
    Advent.PQueue
    Advent.Prelude
    Advent.Queue
    Advent.ReadS
    Advent.Search
    Advent.SmallSet
    Advent.Tokenize

  other-modules:
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Types

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    base             ^>= 4.15 || ^>= 4.16 || ^>=4.17,
    array            ^>= 0.5.4,
    containers       ^>= 0.6,
    template-haskell ^>= 2.17 || ^>= 2.18 || ^>= 2.19,
    MemoTrie         ^>= 0.6,
    transformers     ^>= 0.5 || ^>= 0.6,
    vector           ^>= 0.13,

  if flag(visualize)
    exposed-modules:
      Advent.Visualize
    build-depends:
      JuicyPixels    ^>= 3.3.8,
