cabal-version:       3.0
name:                advent
version:             0.1.0.0
category:            None
synopsis:            Advent of Code common library
description:         All the core functionality needed for the
                     programming game. <https://adventofcode.com>
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
homepage:            https://github.com/glguy/advent
bug-reports:         https://github.com/glguy/advent/issues
build-type:          Simple
Tested-With:         GHC == {9.8.4, 9.10.3, 9.12.2}

source-repository head
  type: git
  location: https://github.com/glguy/advent

flag visualize
  description:       Enable Advent.Visualize
  default:           False
  manual:            True

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  
  if impl(ghc >= 9.8)
    ghc-options:       -Wno-x-partial

  exposed-modules:
    Advent
    Advent.AsmProg
    Advent.Box
    Advent.Chinese
    Advent.Coord
    Advent.Coord3
    Advent.DisjointSet
    Advent.Fix
    Advent.Format
    Advent.Group
    Advent.Input
    Advent.KnotHash
    Advent.MaxClique
    Advent.MinCut
    Advent.Memo
    Advent.Nat
    Advent.Orphans
    Advent.Permutation
    Advent.PQueue
    Advent.Prelude
    Advent.Queue
    Advent.ReadS
    Advent.Search
    Advent.SmallSet
    Advent.Tokenize

  other-modules:
    Advent.Format.Enum
    Advent.Format.Lexer
    Advent.Format.Parser
    Advent.Format.Show
    Advent.Format.Types
    Advent.Format.Utils

  build-tool-depends: alex:alex, happy:happy

  build-depends:
    array            ^>= 0.5.4,
    base             ^>= {4.18, 4.19, 4.20, 4.21},
    containers       ^>= {0.6, 0.7, 0.8},
    fgl              ^>= 5.8,
    MemoTrie         ^>= 0.6,
    mtl              ^>= 2.3.1,
    lens             ^>= 5.3.2,
    random           ^>= {1.2, 1.3},
    template-haskell,
    transformers     ^>= {0.5, 0.6},
    vector           ^>= 0.13,

  if flag(visualize)
    exposed-modules:
      Advent.Visualize
    build-depends:
      JuicyPixels    ^>= 3.3.8,
