cabal-version:       3.6
name:                knothash
version:             0.1.0.0
category:            None
synopsis:            Knothash implementation
description:         Advent of Code 2017 knothash implementation
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2021 Eric Mertens
build-type:          Simple
Tested-With:         GHC ==9.4.8, GHC ==9.6.3, GHC ==9.8.1

library
  hs-source-dirs:    .
  exposed-modules:   KnotHash
  build-depends:
    advent,
    base ^>= {4.17, 4.18, 4.19},
  default-language:  Haskell2010
